# scalar-BEC

./: .gitignore  README.md  interactive_scalar_bec_workbook.ipynb  interactive_scalar_bec_workbook_solutions.ipynb  pyproject.toml  requirements.txt  setup.py
benchmarks/: benchmark_convergence.py  benchmark_scaling.py  grid_convergence.csv  plot_benchmarks.py  scaling.csv  time_convergence.csv
cpp/: phase_kernels.cpp
scalar_bec/: __init__.py  cli.py  cpp_bridge.py  diagnostics.py  solver.py
tests/: test_smoke.py
