[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "scalar-bec"
version = "0.1.0"
description = "Time-splitting spectral scalar BEC solver using JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scipy>=1.13",
]

[project.scripts]
scalar-bec = "scalar_bec.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["scalar_bec"]
